--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.7",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "animate.css": "^4.1.1",
     "framer-motion": "11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
